// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress props colors should be work 1`] = `
<div class="fect-progress">
  <div class="fect-progress__inner" title="20.00%" style="background-color: red; width: 20.00%;"></div><progress value="20" max="100"></progress>
</div>
`;

exports[`Progress should be support different types 1`] = `
<div class="fect-progress">
  <div class="fect-progress__inner" title="10.00%" style="width: 10.00%;"></div><progress value="10" max="100"></progress>
</div>
`;

exports[`Progress should be support different types 2`] = `
<div class="fect-progress">
  <div class="fect-progress__inner" title="10.00%" style="width: 10.00%;"></div><progress value="10" max="100"></progress>
</div>
`;

exports[`Progress should be support different types 3`] = `
<div class="fect-progress">
  <div class="fect-progress__inner" title="10.00%" style="width: 10.00%;"></div><progress value="10" max="100"></progress>
</div>
`;

exports[`Progress should be support different types 4`] = `
<div class="fect-progress">
  <div class="fect-progress__inner" title="10.00%" style="width: 10.00%;"></div><progress value="10" max="100"></progress>
</div>
`;
